tests/fixtures/invalid/min_dict_list.py
# Cannot call min() with Dict[str, int], List[int]
x = min({"a": 1}, [1, 2, 3])
